--- a/data-engineer.html
+++ b/data-engineer.html
@@ -44,12 +44,12 @@
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nike.referrals.selectminds.com/jobs/junior-data-engineer-50452'>Junior Data Engineer - NIKE, Inc. Careers</a></h5> 
+<h5><a href='https://nike.referrals.selectminds.com/jobs/junior-data-engineer-50452'>Junior Data Engineer - NIKE, Inc. Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/MassiveInsights/743999682601628-data-engineer'>Massive Insights Data Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692349818-data-engineer'>Ubisoft Data Engineer | SmartRecruiters</a></h5> 
@@ -64,7 +64,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PurposeFinancial/743999692323217-data-engineer'>Purpose Financial Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PurposeFinancial/743999692323217-data-engineer'>Purpose Financial Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -107,7 +107,7 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/hzr6697kc538u6g1mhqg6cn6re'>Principal Data Engineer (HealthTech) | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/hzr6697kc538u6g1mhqg6cn6re'>Principal Data Engineer (HealthTech) | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -226,7 +226,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/linuxacademy/9b3b415d-d6ee-4e4c-b32b-48192095da3a'>Linux Academy - Data Engineer (Remote)</a></h5> 
+<h5><a href='https://jobs.lever.co/linuxacademy/9b3b415d-d6ee-4e4c-b32b-48192095da3a'>Linux Academy - Data Engineer (Remote)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -312,7 +312,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Stockholm Stockholm Stockholm London</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://itecor.workable.com/j/D433253227'>Itecor - Jobs: Data Engineer Specialist - Apply online</a></h5> 
+<h5><a href='https://itecor.workable.com/j/D433253227'>Itecor - Jobs: Data Engineer Specialist - Apply online</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -342,7 +342,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/mattermost/9acc3876-4e0f-40eb-ac23-cd79e1dcbf4c'>Mattermost - Data Engineer (Remote)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mattermost/9acc3876-4e0f-40eb-ac23-cd79e1dcbf4c'>Mattermost - Data Engineer (Remote)</a></h5> 
 <p><span class="badge badge-light">Arlington</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -378,7 +378,7 @@ online content network for information and online operations of CBS Corporation
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_experienced/job/Bangalore/Big-Data--Data-Engineer_77457'>Senior Big Data Engineer</a></h5> 
+<h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_experienced/job/Bangalore/Big-Data--Data-Engineer_77457'>Senior Big Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 7, 2019 ... Strong 8+ years of industry experience. 2. 4-8 years of strong experience in 
 working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
@@ -407,11 +407,11 @@ working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://semanticbits.workable.com/j/CED9CDE8BA'>SemanticBits - Jobs: Data Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://semanticbits.workable.com/j/CED9CDE8BA'>SemanticBits - Jobs: Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Maryland, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692038453-data-engineer'>4Catalyzer Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692038453-data-engineer'>4Catalyzer Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -428,7 +428,7 @@ working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
 <p>4 days ago ... Senior Data Engineering Manager. San Francisco, CA. Data Engineering ? Data 
 Engineering. Full-time. Apply for this job. Quizlet's mission is to help students?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4324797002'>Job Application for Senior Data Engineer - Marketing Intelligence at SumUp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sumup/jobs/4324797002'>Job Application for Senior Data Engineer - Marketing Intelligence at SumUp</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
